--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -25,17 +25,28 @@ You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=7110
 == SAN Toolkit
 HPUX Host Utilities is a NetApp host software that provides a command line tool kit on your HPUX host. The toolkit is installed when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility which helps you manage the LUNs and HBAs. The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
-.Example//Quest
+.Example
 
 In the following example, the `sanlun lun show` command returns the LUN information.
 
 ----
 # sanlun lun show all
 
-sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c34t0d0  fclp1      FCP        150g    C
-sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c23t0d0  fclp1      FCP        150g    C
-sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c12t0d0  fclp0      FCP        150g    C
-sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c81t0d0  fclp0      FCP        150g    C
+controller(7mode)/ device host lun
+vserver(Cmode)           lun-pathname                   filename
+--------------------------------------------------------------------------
+sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c34t0d0
+sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c23t0d0
+sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c12t0d0
+sanboot_unix         /vol/hpux_boot/boot_hpux_lun      /dev/rdsk/c81t0d0
+
+adapter    protocol   size   mode
+----------------------------------
+fclp1      FCP        150g    C
+fclp1      FCP        150g    C
+fclp0      FCP        150g    C
+fclp0      FCP        150g    C
+
 ----
 
 [NOTE]
@@ -44,7 +55,7 @@ This toolkit is common across all configurations and protocols of the Host Utili
 == Installing HPUX Host Utilities
 The NetApp HPUX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/[NetApp Support Site^] in a compressed file.
 
-You can download the compressed file containing the Host Utilities software packages from the NetApp Support Site. After you have downloaded the file, you must decompress it before installation.
+You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/[NetApp Support Site^]. After you have downloaded the file, you must decompress it before installation.
 
 .Steps
 
