--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -34,19 +34,14 @@ In the following example, the `sanlun lun show` command returns the LUN informat
 ----
 #sanlun lun show all
 controller(7mode)/ device host lun
-vserver(Cmode)                     lun-pathname       filename
----------------------------------------------------------------------------------------
-data_vserver                     /vol/vol1/lun1     /dev/rdsk/c0t600A098038304437522B4E694E49792Dd0s2
-data_vserver                     /vol/vol0/lun2     /dev/rdsk/c0t600A098038304437522B4E694E497938d0s2
-data_vserver                     /vol/vol2/lun3     /dev/rdsk/c0t600A098038304437522B4E694E497939d0s2
-data_vserver                     /vol/vol3/lun4     /dev/rdsk/c0t600A098038304437522B4E694E497941d0s2
+vserver(Cmode)                     lun-pathname       filename                                       adapter protocol size mode
+-----------------------------------------------------------------------------------------------------------------------------------
+data_vserver                     /vol/vol1/lun1     /dev/rdsk/c0t600A098038304437522B4E694E49792Dd0s2 qlc3   FCP       10g cDOT
+data_vserver                     /vol/vol0/lun2     /dev/rdsk/c0t600A098038304437522B4E694E497938d0s2 qlc3   FCP       10g cDOT
+data_vserver                     /vol/vol2/lun3     /dev/rdsk/c0t600A098038304437522B4E694E497939d0s2 qlc3   FCP       10g cDOT
+data_vserver                     /vol/vol3/lun4     /dev/rdsk/c0t600A098038304437522B4E694E497941d0s2 qlc3   FCP       10g cDOT
 
-adapter protocol size mode
-----------------------------
-qlc3       FCP        10g     cDOT
-qlc3       FCP        10g     cDOT
-qlc3       FCP        10g     cDOT
-qlc3       FCP        10g     cDOT
+
 ----
 
 [NOTE]
