--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -15,9 +15,8 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 
-== Pre-requisites
 
-=== What you'll need
+.What you'll need
 *	For reliable operation, you must verify that your entire iSCSI, FC, or FCoE configuration is supported.
 
 You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=71102;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify your configuration.
